docs: add JDBC example for connecting to Trino (#667)
* docs: add JDBC example for connecting to Trino

Presto SQL has been renamed to Trino [0] and the most recent and
complete set of documentation is now on the Trino homepage. In order to
use a consistent set of external links, this example uses Trino but
mentions that it covers Presto.

[0]: https://trino.io/blog/2020/12/27/announcing-trino.html

Authored-by: Bradford D. Boyle <bradfordb@vmware.com>
Co-authored-by: Mireia Perez Fuster <mperezfuster@vmware.com>
Co-authored-by: Lisa Owen <lowen@pivotal.io>

--- a/docs/content/jdbc_pxf.html.md.erb
+++ b/docs/content/jdbc_pxf.html.md.erb
@@ -169,11 +169,12 @@ When you specify the `PARTITION_BY` option, tune the `INTERVAL` value and unit b
 
 ## <a id="examples"></a>Examples
 
-Refer to the following sections for examples on how to read from and write to specific SQL databases:
+Refer to the following topics for examples on how to use PXF to read data from and write data to specific SQL databases:
 
 - [Reading From and Writing to a PostgreSQL Table](jdbc_pxf_postgresql.html)
 - [Reading From and Writing to a MySQL Table](jdbc_pxf_mysql.html)
 - [Reading From and Writing to an Oracle Table](jdbc_pxf_oracle.html)
+- [Reading From and Writing to a Trino Table](jdbc_pxf_trino.html)
 
 ## <a id="about_nq"></a>About Using Named Queries
 
