--- a/docs/content/jdbc_pxf_oracle.html.md.erb
+++ b/docs/content/jdbc_pxf_oracle.html.md.erb
@@ -129,7 +129,7 @@ This procedure will typically be performed by the Greenplum Database administrat
 
 ## <a id="ex_readjdbc"></a>Read from the Oracle Table
 
-Perform the following procedure to create a PXF external table that references the `countries` Oracle table that you created in the previous section, and read the data in the table:
+Perform the following procedure to create a PXF external table that references the `countries` Oracle table that you created in the previous section, and reads the data in the table:
 
 1. Create the PXF external table specifying the `jdbc` profile. For example:
 
