--- a/docs/content/jdbc_pxf_postgresql.html.md.erb
+++ b/docs/content/jdbc_pxf_postgresql.html.md.erb
@@ -122,7 +122,7 @@ This procedure will typically be performed by the Greenplum Database administrat
 
 ## <a id="ex_readjdbc"></a>Read from the PostgreSQL Table
 
-Perform the following procedure to create a PXF external table that references the `forpxf_table1` PostgreSQL table that you created in the previous section, and read the data in the table:
+Perform the following procedure to create a PXF external table that references the `forpxf_table1` PostgreSQL table that you created in the previous section, and reads the data in the table:
 
 1. Create the PXF external table specifying the `jdbc` profile. For example:
 
