docs: add table for unsupported types in Hive JDBC driver (#671)
* docs: add table for unsupported types in Hive JDBC driver

Authored-by: Bradford D. Boyle <bradfordb@vmware.com>
Co-authored-by: Mireia Perez Fuster <mperezfuster@vmware.com>
Co-authored-by: Lisa Owen <lowen@pivotal.io>

--- a/docs/content/jdbc_pxf.html.md.erb
+++ b/docs/content/jdbc_pxf.html.md.erb
@@ -53,7 +53,16 @@ The PXF JDBC connector supports the following data types:
 
 Any data type not listed above is not supported by the PXF JDBC connector.
 
-**Note**: The JDBC connector does not support reading or writing Hive data stored as a byte array (`byte[]`).
+### <a id="datatypes_hive"></a>About Accessing Hive via JDBC
+
+PXF includes version 1.1.0 of the Hive JDBC driver. This version does **not** support the following data types when you use the PXF JDBC connector to operate on a Hive table:
+
+| Data Type | Fixed in Hive JDBC Driver | Upstream Issue | Operations Not Supported |
+|-----------|---------------------------|----------------| ---------- |
+| NUMERIC   | 2.3.0                     | [HIVE-13614](https://issues.apache.org/jira/browse/HIVE-13614) | Write |
+| TIMESTAMP | 2.0.0                     | [HIVE-11748](https://issues.apache.org/jira/browse/HIVE-11748) | Write |
+| DATE      | 1.3.0, 2.0.0              | [HIVE-11024](https://issues.apache.org/jira/browse/HIVE-11024) | Write |
+| BYTEA     | N/A                       | N/A | Read, Write |
 
 ## <a id="queryextdata"></a>Accessing an External SQL Database
 The PXF JDBC connector supports a single profile named `jdbc`. You can both read data from and write data to an external SQL database table with this profile. You can also use the connector to run a static, named query in external SQL database and read the results.
